--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ The project will work like so:
     The golfer will be asked to choose whether they played 18 or 9 holes. - input A
     The golfer will be asked to input the yardage of unrated tees. - input B
     The golfer will input the yardage of the rated women's tees. - input C
+    The golfer will input the slope of the rated women's tees. - input D
+    The golfer will input the course rating of the rated women's tees - input E 
     A lookup will be performed to get the difference to add from the reference table. - function
     The slope and rating to use is presented to the user. - output A
 
@@ -43,9 +45,9 @@ The project will work like so:
         <tr>
             <td>How many holes did you play?</td>
             <td>
-                <input type="radio" id="_9Holes" name="holes" value="9">
+                <input type="radio" name="holes" value="9">
                 <label for="_9Holes">9 Holes</label>
-                <input type="radio" id="_18Holes" name="holes" value="18">
+                <input type="radio" name="holes" value="18">
                 <label for="_18Holes">18 Holes</label>
             </td>
         </tr>
@@ -61,7 +63,21 @@ The project will work like so:
                 <input type="number" id="ratedTeeYards" max="10000">
             </td>
         </tr>
+        <tr>
+            <td>What is the slope of the <strong>rated</strong> tees?</td>
+            <td>
+                <input type="number" id="ratedTeeSlope" max="200">
+            </td>
+        </tr>
+        <tr>
+            <td>What is the course rating of the <strong>rated</strong> tees?</td>
+            <td>
+                <input type="number" id="ratedTeeCR" max="90.0">
+            </td>
+        </tr>
     </table>
+    <button id="calculate">Calculate</button>
     <p id="result" style="display: none;"></p>
 </body>
+<script src="calculate.js"></script>
 </html>
