added note for future enhancement

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ The project will work like so:
         Perform an http get to pull in the ratings from the NCRDB
         Put the reference table in a json, perform lookup via JSON
         Add course handicap calculator
+        Add stats tracker (putts/fairways/GIR etc.)
         Pre-load several local courses for quick reference on site load
     
     Future related project ideas:
