completed slope adjustment calc and display

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ The project will work like so:
         <title>Unrated Tees Calculator</title>
     </head>
 <body>
-    <h1>Calculate the slope and rating for your unrated tees.</h1>
+    <h1>Calculate the slope and rating for your unrated women's tees.</h1>
     <p>The goal of this project is to make it easier for women to calculate the slope & rating of tees that are not rated for women. We like a challenge, lets rate those tees!</p>
     <br>
     <table id="getData">
@@ -81,4 +81,5 @@ The project will work like so:
     <p id="result" style="display: none;"></p>
 </body>
 <script src="calculate.js"></script>
+<script src="lookup.js"></script>
 </html>
