put scripts in a dedicated folder

--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@ The project will work like so:
     <button id="calculate">Calculate</button>
     <p id="result" style="display: none;"></p>
 </body>
-<script src="calculate.js"></script>
-<script src="lookup.js"></script>
+<script src="scripts/calculate.js"></script>
+<script src="scripts/lookup.js"></script>
 </html>
