--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ The project will work like so:
         <link href="styles.css" rel="stylesheet">
     </head>
 <body>
-    <h1>Calculate the slope and rating for your unrated women's tees.</h1>
-    <p>The goal of this project is to make it easier for women to calculate the slope & rating of tees that are not rated for women. We like a challenge, let's rate those tees!</p>
+    <div class="title"><h1>Calculate the slope and rating for your unrated women's tees.</h1>
+    <p>The goal of this project is to make it easier for women to calculate the slope & rating of tees that are not rated for women. We like a challenge, let's rate those tees!</p></div>
     <br>
     <div class="adj-calc-div">
         <table id="getData">
